bk_ida/gccida/g0/get_attr_modrm
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16566:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 16766, "get_attr_modrm"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16566:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 16766, "get_attr_modrm"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16732:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16739:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = memory_operand( recog_data_0.operand[0], VOIDmode) != 0; 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16746:61: error: use of undeclared identifier 'recog_data_0'
result = flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16747:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !register_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16748:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16757:55: error: use of undeclared identifier 'recog_data_0'
|| flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16758:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !register_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16759:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode)); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16776:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = !register_operand( recog_data_0.operand[0], VOIDmode) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16777:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16787:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !register_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16788:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16792:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !register_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16793:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode)); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16806:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = !register_operand( recog_data_0.operand[0], VOIDmode) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16807:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !immediate_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/insn-attrtab.c:16818:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !register_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_modrm/src/obj/insn-attrtab.o] Error 1
